--- a/project.config.json
+++ b/project.config.json
@@ -1003,6 +1003,34 @@
           "id": -1,
           "name": "pages/adminpendinghistory/adminpendinghistory",
           "pathName": "pages/adminpendinghistory/adminpendinghistory",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "pages/applyhistory/applyhistory",
+          "pathName": "pages/applyhistory/applyhistory",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "pages/adminpendinghistory/adminpendinghistory",
+          "pathName": "pages/adminpendinghistory/adminpendinghistory",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "pages/applyhistory/applyhistory",
+          "pathName": "pages/applyhistory/applyhistory",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "pages/adminpendinghistory/adminpendinghistory",
+          "pathName": "pages/adminpendinghistory/adminpendinghistory",
           "scene": null
         }
       ]
