--- a/project.config.json
+++ b/project.config.json
@@ -1031,6 +1031,41 @@
           "id": -1,
           "name": "pages/adminpendinghistory/adminpendinghistory",
           "pathName": "pages/adminpendinghistory/adminpendinghistory",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "pages/user/user",
+          "pathName": "pages/user/user",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "pages/adminpending/adminpending",
+          "pathName": "pages/adminpending/adminpending",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "pages/adminpending/adminpending",
+          "pathName": "pages/adminpending/adminpending",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "pages/remotedooropen/remotedooropen",
+          "pathName": "pages/remotedooropen/remotedooropen",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "pages/appointment/appointment",
+          "pathName": "pages/appointment/appointment",
           "scene": null
         }
       ]
