--- a/project.config.json
+++ b/project.config.json
@@ -1066,6 +1066,20 @@
           "id": -1,
           "name": "pages/appointment/appointment",
           "pathName": "pages/appointment/appointment",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "pages/mycourse/mycourse",
+          "pathName": "pages/mycourse/mycourse",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "pages/appointment/appointment",
+          "pathName": "pages/appointment/appointment",
           "scene": null
         }
       ]
