--- a/project.config.json
+++ b/project.config.json
@@ -1080,6 +1080,13 @@
           "id": -1,
           "name": "pages/appointment/appointment",
           "pathName": "pages/appointment/appointment",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "pages/remotedooropen/remotedooropen",
+          "pathName": "pages/remotedooropen/remotedooropen",
           "scene": null
         }
       ]
